--- a/3.网络应用/axios基本调用.html
+++ b/3.网络应用/axios基本调用.html
@@ -18,7 +18,7 @@
             接口1:https://api.apiopen.top/api/sentences
         */
        document.querySelector(".get").onclick=function() {
-            axios.get("https://api.apiopen.top/api/sentences1").then(
+            axios.get("https://api.apiopen.top/api/sentences").then(
                 function(response){
                     console.log(response);
                 },
